infra/k8s/table-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: table-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: table
  template:
    metadata:
      labels:
        app: table
    spec:
      containers:
        - name: table
          image: pos/table
---
apiVersion: v1
kind: Service
metadata:
  name: table-srv
spec:
  selector:
    app: table
  ports:
    - name: table
      protocol: TCP
      port: 3000
      targetPort: 3000
