infra/k8s/vendor-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendor-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vendor
  template:
    metadata:
      labels:
        app: vendor
    spec:
      containers:
        - name: vendor
          image: pos/vendor
          ports:
            - containerPort: 3000
              protocol: TCP
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/tls
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: tls-secret            
---
apiVersion: v1
kind: Service
metadata:
  name: vendor-srv
spec:
  selector:
    app: vendor
  ports:
    - name: vendor
      protocol: TCP
      port: 3000
      targetPort: 3000
