infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - pos.com
      secretName: tls-secret
  rules:
    - host: pos.com
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: open-srv
                port:
                  number: 3000
          - path: /api/vendors/?(.*)
            pathType: Prefix
            backend:
              service:
                name: vendor-srv
                port:
                  number: 3000
          - path: /api/admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: vendor-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
